--- a/backend/package.json
+++ b/backend/package.json
@@ -30,10 +30,10 @@
   "author": "ankaboot",
   "license": "GNU AGPL v3",
   "dependencies": {
-    "@ankaboot.io/imap-autoconfig": "^0.1.1",
+    "@ankaboot.io/imap-autoconfig": "^0.1.2",
     "@faker-js/faker": "^9.2.0",
-    "@sentry/tracing": "^7.120.1",
     "@sentry/node": "^8.43.0",
+    "@sentry/tracing": "^7.120.1",
     "@supabase/supabase-js": "^2.47.5",
     "axios": "^1.7.9",
     "cookie-parser": "^1.4.7",
@@ -46,7 +46,6 @@
     "google-auth-library": "^9.15.0",
     "html-entities": "^2.5.2",
     "imap": "^0.8.19",
-    "imap-autoconfig": "^0.1.5",
     "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
     "nanoid": "^3.3.8",
@@ -63,6 +62,15 @@
     "xoauth2": "^1.2.0",
     "zod": "^3.24.1",
     "zod-error": "^1.5.0"
+  },
+  "overrides": {
+    "stripe-cli": {
+      "uuid": "^11.0.4"
+    },
+    "imap": {
+      "semver": "^7.6.3"
+    },
+    "glob": "10.4.2"
   },
   "devDependencies": {
     "@jest/globals": "^29.5.0",
@@ -92,7 +100,7 @@
     "prettier": "2.7.1",
     "recheck": "^4.4.5",
     "stripe-cli": "^0.1.0",
-    "supertest": "^6.3.1",
+    "supertest": "^7.0.0",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
